Task #1607: Apply New Styles to Package Documentation Module Navigation (#1638)

--- a/asset/css/doc.css
+++ b/asset/css/doc.css
@@ -60,6 +60,7 @@ div.odoc *:hover > a.anchor:hover {
 div.odoc .spec:target {
   background: rgb(255, 248, 206);
 }
+
 div.odoc .anchored:target,
 div.odoc h1:target,
 div.odoc h2:target,
@@ -187,7 +188,7 @@ div.odoc .comment-delim {
 
 /* package explorer navmap and breadcrumb tag */
 
-.navmap:hover ul {
+.navmap ul {
   border-color: gainsboro;
 }
 
@@ -199,10 +200,6 @@ div.odoc .comment-delim {
 
 .icon-expand {
   cursor: pointer;
-}
-
-span.icon-expand:not(.open) > .navmap-tag , span.no-expand > .navmap-tag {
-  background:white;
 }
 
 .navmap-tag {
@@ -227,19 +224,23 @@ span.icon-expand:not(.open) > .navmap-tag , span.no-expand > .navmap-tag {
 .navmap-tag.library-tag::after {
   content: "lib";
 }
+
 .library-tag {
   color: rgb(91, 102, 114);
   background-color: rgb(91, 102, 114);
   border-color: rgb(91, 102, 114);
 }
+
 .navmap-tag.module-tag::after {
   content: "M";
 }
+
 .module-tag {
   color: #cc4e0c;
   background-color: #cc4e0c;
   border-color: #cc4e0c;
 }
+
 .navmap-tag.module-type-tag::after {
   content: "Mt";
 }
@@ -248,6 +249,7 @@ span.icon-expand:not(.open) > .navmap-tag , span.no-expand > .navmap-tag {
   background-color: #027491;
   border-color: #027491;
 }
+
 .navmap-tag.parameter-tag::after {
   content: "P";
 }
@@ -264,6 +266,7 @@ span.icon-expand:not(.open) > .navmap-tag , span.no-expand > .navmap-tag {
   background-color: rgb(163, 34, 34);
   border-color: rgb(163, 34, 34);
 }
+
 .navmap-tag.class-type-tag::after {
   content: "Ct";
 }
@@ -273,30 +276,44 @@ span.icon-expand:not(.open) > .navmap-tag , span.no-expand > .navmap-tag {
   border-color: rgb(32, 68, 165);
 }
 
+span.icon-expand > .navmap-tag,
 span.no-expand > .navmap-tag {
-  margin-left: 12px;
+  color: white;
 }
 
-span.icon-expand.open > .navmap-tag {
-  color:white;
-}
-
-span.icon-expand::before {
-  font-weight: bold;
-  content: " \25B8";
-  text-align: center;
-  box-sizing: border-box;
-  display:flex;
+div.nav-expand::before {
+  content: "";
+  display: flex;
   align-items: center;
-  padding-right:4px;
-}
-
-span.icon-expand.open::before {
-  content: " \25BE";
+  background-color: #cc4e0c;
+  height: 22px;
+  width: 2px;
+  position: absolute;
+  margin: 3px 0 3px;
+  margin-left: -0.65rem;
+  border-radius: 30px;
 }
 
 .xref-unresolved {
   text-decoration: underline;
   font-weight: 700;
   color: gray;
+}
+
+span.arrow-expand.open {
+  color: #cc4e0c;
+  transform: rotate(180deg);
+}
+
+span.sign-expand::before {
+  content: " \002B";
+  display: flex;
+  align-items: center;
+  font-size: 1.25rem;
+  margin-top: -0.25rem;
+}
+
+span.sign-expand.open::before {
+  content: " \2212";
+  color: #cc4e0c;
 }
