add word-wrap:break-word on .prose element (#1656) (#1722)

--- a/src/ocamlorg_frontend/css/styles.css
+++ b/src/ocamlorg_frontend/css/styles.css
@@ -114,6 +114,10 @@ body {
     background: rgba(39, 39, 39, 1);
 }
 
+.prose {
+  word-wrap: break-word;
+}
+
 .prose [id] {
   scroll-margin-top: 2rem;
 }
